# FlutterFFITips

./: Readme.md
001hi_ffi/: README.md  ffigen.yaml  pubspec.yaml
001hi_ffi/android/: build.gradle  settings.gradle
001hi_ffi/android/src/main/: AndroidManifest.xml
001hi_ffi/example/: README.md  pubspec.yaml
001hi_ffi/example/android/app/: build.gradle.kts
001hi_ffi/example/ios/Runner/: Info.plist
001hi_ffi/example/ios/Runner.xcodeproj/: project.pbxproj
001hi_ffi/example/lib/: main.dart
001hi_ffi/example/linux/: CMakeLists.txt
001hi_ffi/example/linux/flutter/: generated_plugins.cmake
001hi_ffi/example/linux/runner/: my_application.cc
001hi_ffi/example/macos/Runner.xcodeproj/: project.pbxproj
001hi_ffi/example/ohos/: build-profile.json5  oh-package.json5
001hi_ffi/example/ohos/AppScope/: app.json5
001hi_ffi/example/windows/: CMakeLists.txt
001hi_ffi/example/windows/flutter/: generated_plugins.cmake
001hi_ffi/example/windows/runner/: Runner.rc  main.cpp
001hi_ffi/ios/: hi_ffi.podspec
001hi_ffi/ios/Classes/: hi_ffi.c
001hi_ffi/lib/: hi_ffi.dart  hi_ffi_bindings_generated.dart
001hi_ffi/linux/: CMakeLists.txt
001hi_ffi/macos/: hi_ffi.podspec
001hi_ffi/ohos/: oh-package.json5
001hi_ffi/ohos/src/main/: module.json5
001hi_ffi/src/: CMakeLists.txt  hi_ffi.c
001hi_ffi/windows/: CMakeLists.txt
002hi_ffi_xmake/: .gitignore  Readme.md  ffigen.yaml  pubspec.yaml
002hi_ffi_xmake/android/: build.gradle  settings.gradle
002hi_ffi_xmake/android/src/main/: AndroidManifest.xml
002hi_ffi_xmake/example/: README.md  pubspec.yaml
002hi_ffi_xmake/example/android/app/: build.gradle.kts
002hi_ffi_xmake/example/ios/Runner/: Info.plist
002hi_ffi_xmake/example/ios/Runner.xcodeproj/: project.pbxproj
002hi_ffi_xmake/example/lib/: main.dart
002hi_ffi_xmake/example/linux/: CMakeLists.txt
002hi_ffi_xmake/example/linux/flutter/: generated_plugins.cmake
002hi_ffi_xmake/example/linux/runner/: my_application.cc
002hi_ffi_xmake/example/macos/Runner.xcodeproj/: project.pbxproj
002hi_ffi_xmake/example/ohos/: build-profile.json5  oh-package.json5
002hi_ffi_xmake/example/ohos/AppScope/: app.json5
002hi_ffi_xmake/example/windows/: CMakeLists.txt
002hi_ffi_xmake/example/windows/flutter/: generated_plugins.cmake
002hi_ffi_xmake/example/windows/runner/: Runner.rc  main.cpp
002hi_ffi_xmake/ios/: hi_ffi_xmake.podspec
002hi_ffi_xmake/lib/: hi_ffi_xmake.dart  hi_ffi_xmake_bindings_generated.dart
002hi_ffi_xmake/linux/: CMakeLists.txt
002hi_ffi_xmake/macos/: hi_ffi_xmake.podspec
002hi_ffi_xmake/macos/Classes/: hi_ffi_xmake.c
002hi_ffi_xmake/ohos/: oh-package.json5
002hi_ffi_xmake/src/: CMakeLists.txt  hi_ffi_xmake.c  hi_ffi_xmake.h
002hi_ffi_xmake/src/xmake/: xmake.lua
002hi_ffi_xmake/src/xmake/include/: hi.h
002hi_ffi_xmake/src/xmake/script/: buildOhNative.bat  buildWinNative.bat
002hi_ffi_xmake/src/xmake/src/: hi.cpp
002hi_ffi_xmake/windows/: CMakeLists.txt
(+15 files in other folders)
